# bribe

./: .env  .gitignore  Cargo.toml  bribe.db  diesel.toml
migrations/2025-07-22-231041_create_tables/: up.sql
migrations/2025-07-23-121720_autoincrement/: up.sql
migrations/2025-07-30-185407_rename_tables/: up.sql
migrations/2025-07-30-212222_add_event_title/: up.sql
src/: event.rs  main.rs  model.rs  schema.rs  settings.rs
src/ai/: agent.rs
src/api/: auth.rs  mod.rs  token.rs  utils.rs
src/api/routes/: event.rs  login.rs  message.rs  mod.rs  user.rs
