[package]
name = "bribe"
version = "0.1.0"
edition = "2021"

[dependencies]
r2d2 = "0.8"
r2d2_sqlite = "0.24"
diesel = { version = "2.2.0", features = ["sqlite", "chrono", "r2d2", "returning_clauses_for_sqlite_3_35"] }
dotenvy = "0.15"
actix-web = "4.11.0"
env_logger = "0.11.8"
log = "0.4.27"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
argon2 = { version = "0.5", features = ["std"] }
rand_core = "0.9.3"
rand = "0.8"
